Update GitHub Actions
Signed-off-by: Per Goncalves da Silva <pegoncal@redhat.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,12 @@
 name: Lint
 
 on:
-  push:
+  workflow_dispatch:
   pull_request:
+  merge_group:
+  push:
+    branches:
+      - main
 
 jobs:
   lint:
@@ -10,14 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Clone the code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Setup Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6
         with:
           go-version-file: go.mod
 
       - name: Run linter
-        uses: golangci/golangci-lint-action@v8
-        with:
-          version: v2.3.0
+        run: make lint
