--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,13 +38,12 @@ jobs:
       - name: Set the release related variables
         run: |
           if [[ $GITHUB_REF == refs/tags/* ]]; then
-            # Release tags.
             echo VERSION="$(echo "${GITHUB_REF#refs/tags/}" | sed 's/^v//')" >> $GITHUB_ENV
+            echo GORELEASER_ARGS="--clean" >> $GITHUB_ENV
             echo ENABLE_RELEASE_PIPELINE=true >> $GITHUB_ENV
           elif [[ $GITHUB_REF == refs/heads/main ]]; then
-            # 'main' branch build.
             echo TAG=snapshot >> $GITHUB_ENV
-            echo ENABLE_RELEASE_PIPELINE=true >> $GITHUB_ENV
+            echo GORELEASER_ARGS="--clean" >> $GITHUB_ENV
           fi
 
       - name: Release
