Add yq to bingo
Signed-off-by: Per Goncalves da Silva <pegoncal@redhat.com>

--- a/.bingo/variables.env
+++ b/.bingo/variables.env
@@ -26,3 +26,5 @@ OPM="${GOBIN}/opm-v1.59.0"
 
 SETUP_ENVTEST="${GOBIN}/setup-envtest-v0.0.0-20250108225256-3b0b9958086f"
 
+YQ="${GOBIN}/yq-v4.47.2"
+
