Add verify to gha
Signed-off-by: Per Goncalves da Silva <pegoncal@redhat.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: sanity-checks
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   lint:
-    name: Run on Ubuntu
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - name: Clone the code
@@ -23,3 +23,18 @@ jobs:
 
       - name: Run linter
         run: make lint
+
+  verify:
+    name: verify
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone the code
+        uses: actions/checkout@v5
+
+      - name: Setup Go
+        uses: actions/setup-go@v6
+        with:
+          go-version-file: go.mod
+
+      - name: Run verify
+        run: make verify
