--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: release
 
 on:
   workflow_dispatch:
@@ -14,7 +14,7 @@ on:
 
 jobs:
   goreleaser:
-    name: Release
+    name: release
     runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
