--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -1,4 +1,4 @@
-name: E2E Tests
+name: e2e
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   test-e2e:
-    name: Run on Ubuntu
+    name: e2e
     runs-on: ubuntu-latest
     steps:
       - name: Clone the code
