--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: tests
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test:
-    name: Run on Ubuntu
+    name: unit
     runs-on: ubuntu-latest
     steps:
       - name: Clone the code
