Fixup release flags
Signed-off-by: Per Goncalves da Silva <pegoncal@redhat.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,7 @@ jobs:
             echo ENABLE_RELEASE_PIPELINE=true >> $GITHUB_ENV
           elif [[ $GITHUB_REF == refs/heads/main ]]; then
             echo TAG=snapshot >> $GITHUB_ENV
+            echo ENABLE_RELEASE_PIPELINE=true >> $GITHUB_ENV
           fi
 
       - name: Release
